--- a/task6.css
+++ b/task6.css
@@ -1,8 +1,12 @@
 span{
-	color: white; padding: 3px; border-radius: 5px 5px; display: none;
+	color: white; padding: 5px; border-radius: 5px 5px; display: none;
 }
 input{
 	display:none;
+}
+
+label{
+	padding: 5px;
 }
 
 label[for="red"]{
@@ -16,13 +20,13 @@ label[for="blue"]{
 }
 
 #red:checked ~ label[for="red"]{
-	opacity:1;
+	opacity:1; color:white; background-color: red; border-radius: 5px 5px;
 }
 #green:checked ~ label[for="green"]{
-	opacity:1;
+	opacity:1; color:white; background-color: green; border-radius: 5px 5px;
 }
 #blue:checked ~ label[for="blue"]{
-	opacity:1;
+	opacity:1; color:white; background-color: blue; border-radius: 5px 5px;
 }
 
 #red ~ .red {
