--- a/css/gallery.css
+++ b/css/gallery.css
@@ -25,10 +25,10 @@ a:hover {
 }
 
 .holder{
-	-background-color: #edebf9;
+	background-color: white;
 	width: 990px;
 	margin: 0 auto;
-	padding: 30px 30px;
+	padding: 87px 30px;
 }
 
 .testimonial_section {
