--- a/css/footer.css
+++ b/css/footer.css
@@ -3,6 +3,7 @@
 	line-height: 1.3em;
 	width: 100%;
 	background: white;
+	border-top: 5px solid DarkGray;
 	margin: 1em 0 0;
 	font-size: .75rem;
 	padding: 10px 0;
