--- a/css/menu.css
+++ b/css/menu.css
@@ -27,9 +27,8 @@ ul.menu li {
 	padding: 0.5em 1em 0.5em 1em;
 	
 }
-header li:hover{
-	text-shadow: none;
-	background: Silver;
+.menu > li:hover{
+	background: Gray;
 }
 li.more_menu {
 	float: right;
@@ -37,14 +36,18 @@ li.more_menu {
 .menu_link,
 .menu_link:active,
 .menu_link:hover {
-	text-decoration: none;
 	outline: 0;
 	color: white;
 	font-family: Impact;
 	font-size: 18pt;
 	letter-spacing: .1em;
+	text-decoration: none;
 	text-transform: uppercase;
+	/* text-shadow: 1px 1px 2px black; */
+}
+.submenu .menu_link:hover {
 	text-shadow: 1px 1px 2px black;
+	
 }
 .submenu {
 	position: absolute;
@@ -54,7 +57,7 @@ li.more_menu {
 	padding: 0;
 	opacity: 0;
 	width: 100%;
-	background: Silver;
+	background: Gray;
 	z-index: 3;
 	transition: all .3s ease-in-out;
 	transform: scaleY(0);
